// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notifyOwnerNow > preserves the complete mixed L1 batch in en 1`] = `
{
  "delivered": [
    {
      "mediaUrls": [
        "/staged/local/photo.png",
        "https://images.test/a.jpg",
        "https://images.test/b.png",
        "https://images.test/d.webp",
        "/staged/local/voice.ogg",
      ],
      "text": "💬 Alice#5fc0djbz replied to your "TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT…": First reply
Met last week

📨 Letter received
From: Alice#5fc0djbz

LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL… (full text in the inbox)

📎 Attachment: photo.png

💬 #g6v3fp7w replied to you: Second reply

📨 Letter received
From: Bob#g6v3fp7w

https://images.test/b.png
https://images.test/d.webp

📎 Attachment unavailable; its content could not be read.
Old friend

📨 Letter received
From: Bob#g6v3fp7w

📎 Attachment: voice.ogg

📨 Letter received
From: #g6v3fp7w

BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB

🎉 **Congrats! Your X account is verified on PopClaw.**

✅ **@alice · Verified**

Now, anyone who opens your PopClaw namecard can see who you are on X.

**The reputation you’ve built on X now has a home on PopClaw.**

👥 At verification, 30000 people followed you on X.

Your PopClaw namecard: https://profile.test/中

Couldn't verify x:@bob — Proof unavailable. Send me the post link — or just say "posted" — and I'll retry right away. There's no cooldown on a rejection.

 Want to see all the replies? Just say so

 Want the full letter? Just say so",
    },
  ],
  "outcome": "channel",
  "pending": 0,
  "rawMedia": [
    "/local/photo.png",
    "https://images.test/a.jpg",
    "https://images.test/b.png",
    "/local/lost.png",
    "https://images.test/d.webp",
    "/local/voice.ogg",
  ],
  "staged": [
    "/local/photo.png",
    "/local/lost.png",
    "/local/voice.ogg",
  ],
}
`;

exports[`notifyOwnerNow > preserves the complete mixed L1 batch in zh-CN 1`] = `
{
  "delivered": [
    {
      "mediaUrls": [
        "/staged/local/photo.png",
        "https://images.test/a.jpg",
        "https://images.test/b.png",
        "https://images.test/d.webp",
        "/staged/local/voice.ogg",
      ],
      "text": "💬 Alice#5fc0djbz 回了你那条「TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT…」：First reply
Met last week

📨 收到信件
来自：Alice#5fc0djbz

LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL…（全文见信箱）

📎 附件：photo.png

💬 #g6v3fp7w 回了你的发言：Second reply

📨 收到信件
来自：Bob#g6v3fp7w

https://images.test/b.png
https://images.test/d.webp

📎 附件暂不可用，未能读取内容。
Old friend

📨 收到信件
来自：Bob#g6v3fp7w

📎 附件：voice.ogg

📨 收到信件
来自：#g6v3fp7w

BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB

🎉 **恭喜，你的 X 账号认证成功！**

✅ **@alice · 已认证**

从此，江湖上的朋友点开你的 PopClaw 名片，就能认出 X 上的你。

**你在 X 上积累的名声，如今在 PopClaw 也有了名片。**

👥 认证时，30000 人在 X 上关注着你。

你的 PopClaw 名片：https://profile.test/中

游侠这次没核验通过 x:@bob——Proof unavailable。把帖子链接给我（或说声「发好了」），带上证据立刻重试：被拒没有等待期。

　 想看全部回复，跟我说一声

　 想看这封信的全文，跟我说一声",
    },
  ],
  "outcome": "channel",
  "pending": 0,
  "rawMedia": [
    "/local/photo.png",
    "https://images.test/a.jpg",
    "https://images.test/b.png",
    "/local/lost.png",
    "https://images.test/d.webp",
    "/local/voice.ogg",
  ],
  "staged": [
    "/local/photo.png",
    "/local/lost.png",
    "/local/voice.ogg",
  ],
}
`;
